# aver

./: .gitignore  AGENTS.md  Cargo.toml  LOOP.md  LOOP_STATUS.md  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  install.sh  justfile
.github/workflows/: ci.yml  release.yml
.karta/: karta.db
.pi/subflow/: runs.jsonl
crates/aver-cli/: Cargo.toml
crates/aver-cli/src/: main.rs
crates/aver-cli/tests/: communities.rs  episode_flow.rs  observation_flow.rs  observation_surfaces.rs  recall.rs  remember.rs  scope_cli.rs  status.rs  version.rs
crates/aver-core/: Cargo.toml  build.rs
crates/aver-core/src/: extractor.rs  lib.rs  privacy.rs  recall.rs  retrieval.rs  seed.rs  types.rs  validation.rs  vector.rs
crates/aver-core/tests/: chat_extractor.rs  claims.rs  community_detection.rs  consolidation_adr.rs  episodic.rs  eval.rs  extractor.rs  extractor_ingestion.rs  hybrid_retrieval.rs  hyperedges.rs  migrations.rs  ontology_agent_history.rs  ontology_enforcement.rs  operational_policy.rs  path_queries.rs  privacy.rs  recall_filters.rs  scope.rs  scope_reads.rs  scope_writes.rs  shared_mode.rs  sqlite_vss.rs  triggers_and_snapshots.rs  vector.rs  vector_chunks.rs  vector_index.rs  vector_offline.rs  vector_schema.rs
crates/aver-eval/: Cargo.toml
crates/aver-eval/src/: beam.rs  lib.rs  main.rs  prompt_assertions.rs  tuning.rs
crates/aver-eval/tests/: beam.rs  cli.rs  prompt_assertions.rs  regression_and_hallucination.rs  runner.rs  tuning.rs
crates/aver-extractor/: Cargo.toml
crates/aver-extractor/src/: lib.rs
crates/aver-extractor/src/lang/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
crates/aver-extractor/src/prose/: mod.rs
crates/aver-extractor/tests/: jsonrpc_plugin.rs  multilang.rs  prose.rs  rust.rs
crates/aver-scope-shim/: Cargo.toml
crates/aver-scope-shim/src/: lib.rs  main.rs
crates/aver-scope-shim/tests/: scope_derivation.rs
crates/aver-server/: Cargo.toml
crates/aver-server/src/: adapters.rs  auth.rs  config.rs  consent.rs  http.rs  lib.rs  main.rs  mcp.rs  oauth.rs  origin.rs  scope_resolution.rs  scopes.rs  tools.rs
crates/aver-server/templates/: consent.html  error.html
crates/aver-server/tests/: adapter_boundaries.rs  auth_db.rs  auth_db_consent.rs  bin_smoke.rs  config.rs  http_routes.rs  mcp_instructions.rs  mcp_observation_surfaces.rs  mcp_service.rs  oauth_code_flow.rs  oauth_consent_flow.rs  oauth_discovery.rs  oauth_scopes.rs  pkce.rs  refresh_and_cors.rs  scope_mcp.rs  scope_resolution.rs  tools.rs  vector_chunk.rs
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: main.rs
crates/memory-cli/tests/: recall.rs  remember.rs  status.rs
crates/memory-core/: Cargo.toml
crates/memory-core/src/: lib.rs  retrieval.rs  vector.rs
crates/memory-core/tests/: claims.rs  episodic.rs  extractor.rs  hybrid_retrieval.rs  migrations.rs  privacy.rs  vector.rs  vector_chunks.rs  vector_schema.rs
crates/memory-extractor/: Cargo.toml
crates/memory-server/: Cargo.toml
crates/memory-server/src/: auth.rs  config.rs  http.rs  lib.rs  main.rs  mcp.rs  oauth.rs  tools.rs
crates/memory-server/tests/: auth_db.rs  bin_smoke.rs  config.rs  http_routes.rs  mcp_service.rs  oauth_code_flow.rs  oauth_discovery.rs  pkce.rs  tools.rs
doc/: how-it-works.md
doc/adr/: 0002-tri-partite-memory-model-episodic-log-semantic-graph-vector-store.md  0003-confidence-tri-state-with-provenance-on-every-memory-edge.md  0004-hybridrag-retrieval-with-adaptive-alpha.md  0005-append-only-writes-with-between-session-consolidation.md  0006-local-first-storage-sqlite-plus-sqlite-vss-defer-graph-db-until-team-scale.md  0007-deterministic-ast-extraction-for-code-via-tree-sitter-llm-extraction-only-for-prose.md  0008-five-tool-memory-surface-exposed-to-the-agent.md  0009-privacy-policy-secrets-and-credentials-never-enter-memory.md  0010-type-hierarchy-and-ontology-discipline.md  0011-shared-graph-mode-and-community-detection.md  0012-evaluation-methodology-for-memory-quality.md  0013-implementation-language-rust.md  0014-triggered-episodic-to-claim-memory.md  0015-mcp-oauth-server-and-agent-tool-surface.md  0016-episodic-observation-projections-for-compaction-continuity.md  0017-vector-index-activation.md  0018-ontology-enforcement.md  0019-operational-policy.md  0022-connection-scope-resolution.md  (+3 more)
eval/: memory_agent_bench.json
migrations/: 0001_init.sql  0002_vector_chunks.sql  0003_ontology.sql  0004_episodic_candidates.sql  0005_contradictions.sql  0006_observations.sql  0007_entities.sql  0008_privacy_rejections.sql  0009_value_range_checks.sql  0010_vector_index.sql  0011_ontology_enforcement.sql  0012_source_refs_json_checks.sql  0013_observation_source_event_ids_json_checks.sql  0014_vector_embedding_json_checks.sql  0015_vector_embedding_numeric_checks.sql  0016_observation_source_event_ids_integer_checks.sql  0017_claim_source_refs_text_checks.sql  0018_observation_source_event_ids_nonempty_checks.sql  0019_claim_source_refs_nonempty_checks.sql  0020_claim_source_refs_nonblank_checks.sql  0021_observation_source_event_ids_positive_checks.sql  0022_vector_embedding_nonempty_checks.sql  0023_vector_chunk_text_nonblank_checks.sql  0024_vector_chunk_embedding_model_nonblank_checks.sql  0025_episodic_event_session_nonblank_checks.sql  0026_episodic_event_kind_nonblank_checks.sql  0027_episodic_event_source_nonblank_checks.sql  0028_episodic_event_agent_id_nonblank_checks.sql  0029_episodic_event_agent_id_charset_checks.sql  0030_claim_agent_id_nonblank_checks.sql  0031_claim_agent_id_charset_checks.sql  0032_observation_agent_id_nonblank_checks.sql  0033_observation_agent_id_charset_checks.sql  0034_observation_session_nonblank_checks.sql  0035_observation_content_nonblank_checks.sql  0036_observation_derivation_nonblank_checks.sql  0037_observation_id_nonblank_checks.sql  0038_candidate_claim_subject_nonblank_checks.sql  0039_candidate_claim_predicate_nonblank_checks.sql  0040_candidate_claim_object_nonblank_checks.sql  (+78 more)
(+29 files in other folders)
