[workspace]
resolver = "2"
members  = ["crates/memory-core", "crates/memory-cli"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "MIT"
authors      = ["Christian Pojoni"]
rust-version = "1.95"

[workspace.dependencies]
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
thiserror   = "1"
time        = { version = "0.3", features = ["serde", "macros"] }
directories = "5"
tempfile    = "3"

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
