[package]
name        = "aver-cli"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
rust-version.workspace = true
description.workspace  = true
repository.workspace   = true
homepage.workspace     = true
readme                 = "../../README.md"
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "aver"
path = "src/main.rs"

[dependencies]
aver-core      = { path = "../aver-core", default-features = false }
clap.workspace   = true
anyhow.workspace = true

[dev-dependencies]
serde_json.workspace = true
assert_cmd = "2"
tempfile.workspace = true
rusqlite.workspace = true
