[package]
name        = "aver-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
rust-version.workspace = true

[features]
default = ["ollama"]
ollama = ["dep:ureq"]

[dependencies]
rusqlite.workspace    = true
sqlite-vec.workspace  = true
serde.workspace       = true
serde_json.workspace  = true
ureq = { workspace = true, optional = true }
thiserror.workspace   = true
time.workspace        = true
directories.workspace = true
flate2                = "1"

[dev-dependencies]
tempfile.workspace = true
flate2 = "1"
