[package]
name = "aver-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
default-run = "aver-eval"

[dependencies]
aver-core = { path = "../aver-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
ureq = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "aver-beam100k"
path = "src/bin/aver-beam100k.rs"

[dev-dependencies]
