[package]
name        = "aver-extractor"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
rust-version.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-kotlin.workspace = true
tree-sitter-swift.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
