[package]
name = "aver-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "aver-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
askama = "0.12"
aver-core = { path = "../aver-core" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
rusqlite.workspace = true
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
time.workspace = true
schemars = "1.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "a64be231527f923e9f84d4dd7bf3c3bd695ee53e", features = ["server", "macros", "transport-streamable-http-server"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["macros"] }
http = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"

[dev-dependencies]
tempfile.workspace = true
