[package]
name        = "memory-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
ureq.workspace        = true
thiserror.workspace   = true
time.workspace        = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
